			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01aj: *********************************

IMP: (11/4/04, GVG) PolyBase: not applying transformation if matrix is identity

BUG: (11/4/04, GVG) Rouding points before merging in DRC min area calculation otherwise merged area won't be
a simple polygon. FIX: poly.roundPoints();

BUG: (11/4/04, GVG) DRC and PolySelect rule, ignoring case when remaining area after second substract was empty.
FIX: call Area.isEmpty()

IMP: (11/4/04, SMR) GDS output produces better cell names.

IMP: (11/4/04, SMR) "Click" sounds are only played if there is a sound card.

IMP: (11/3/04, SMR) CIF resolution errors now select the object.

IMP: (11/3/04, SMR) Removed unused listeners: ClickAndDragListener and WiringListener.

IMP: (11/3/04, GVG) Fix in network evaluation during hierarchical min area checking

IMP/MAN: (11/3/04, SMR) Printing resolution is now higher and can be set in the Preferences panel.

IMP: (11/3/04, GVG) Another algorithm for DRC TSMC90 PP/NP.R.1 rule

IMP/MAN: (11/3/04, GVG) Default technology in preferences. It will be used for setting palette. Manual updated.

BUG: (11/2/04, RK) Repair bugs from partial conversion of gate layout generators to tsmc90

IMP; (11/2/04, GVG) CO.S.1, VIAx.S.1 and VIAn.S.1 rules for vias (meta1 and actives cuts)

************************* Version 8.01ai: *********************************

BUG: (11/2/04, DN) Library.findNodeProto should find the newest
    version of the cell, when no version number is specified.
FIX: Add test to "Library.findNodeProto.

BUG: (11/2/04, DN) When view of a cell is changed from layout to
    schematic, its technology (and TechPallette) remains layout.
FIX: Clear technology in ViewChanges.ChangeCellView

BUG: (11/2/04, DN) When parsing routines will meet with non-Latin
    unicode digits, they may retuin strange numbers.
FIX: Use TextUtils.isDigit and TextUtils.isLetterOrDigit.