@@ -2,6 +2,14 @@
 
 NOTE: Please place changes under the version that will be released next.
 
+************************* Version 8.01ak: *********************************
+
+BUG: (11/5/04, DN) If Undo occurs after first Copy command, the Clibboard cell becomes unlinked.
+FIX: In User.init() call Clipboard.clear() to create the Clipboard cell.
+
+BUG: (11/5/04, DN) When Undoing at start of Electric, a crash happens.
+FIX: In Undo.undoABatch test batch.startHighlightsOffset on null.
+
 ************************* Version 8.01aj: *********************************
 
 IMP: (11/4/04, GVG) PolyBase: not applying transformation if matrix is identity
